# tiralabra-s2022

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
Dokumentaatio/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
Dokumentaatio/Viikkoraportit/: loppupalautusraportti.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
htmlcov/: .coverage  d_08b4cb1648a15a99___init___py.html  d_08b4cb1648a15a99_menu_test_py.html  d_08b4cb1648a15a99_multiplayer_test_py.html  d_145eef247bfb46b6_index_py.html  d_145eef247bfb46b6_load_image_py.html  d_e5f2f2a1f21f4df3___init___py.html  d_e5f2f2a1f21f4df3_gameplay_py.html  d_e5f2f2a1f21f4df3_multiplayer_py.html  d_e6812f907734570e_game_UI_py.html  d_e6812f907734570e_menu_UI_py.html  d_e6c6aa62fec80ede___init___py.html  d_e6c6aa62fec80ede_frontpage_py.html  index.html  status.json
src/: index.py  load_image.py  performance_tests.py
src/UI/: game_UI.py  menu_UI.py
src/menu/: frontpage.py
src/modules/: gameplay.py  mm_ab.py  multiplayer.py  singleplayer.py
src/tests/: menu_test.py  minmax_test.py  multiplayer_test.py  singleplayer_test.py
